@@ -3,6 +3,7 @@
 + добавлен desktop DataEngine
 + добавлен виджет PTM desktop panel
 + добавлено поле текущий рабочий стол (теги $name, $number, $total)
++ добавлена возможность взаимодействия с плеерами через mpris
 * dataengine переписан с использованием tasks
 * фикс чтения температуры nvidia
 
