@@ -3,6 +3,7 @@ Ver.1.11.0:
 + added desktop DataEngine
 + added PTM desktop panel
 + added desktop label (tags $name, $number, $total)
++ added ability to interact with players using mpris
 * rewrite dataengine to use tasks
 * fix nvidia temperature definition
 
